fix isseses
Change-Id: I8b3faaa66a4b7deafae7c884dda23c17b21b2f50
Signed-off-by: Quan-Zhong <quanzhong@huawei.com>